# ac3-eac3-metadata-emulation

./: CMakeLists.txt  README.md  conanfile.txt  test_drc.sh
dlb_intrinsics/: dlb_abstraction.h  dlb_compiler.h  dlb_const.h  dlb_intrinsics.h  dlb_nonlinear.h  dlb_util_intops.h
dlb_intrinsics/backend/generic/: dlb_backend_float32.h  dlb_backend_float64.h  dlb_backend_risc16x32.h  dlb_backend_ufloat64.h  dlb_std_util_intops.h
dlb_intrinsics/compiler/c90/: dlb_compiler_c90.h  dlb_compiler_keyword_c90.h
dlb_intrinsics/compiler/c99/: dlb_compiler_c99.h  dlb_compiler_keyword_c99.h
dlb_intrinsics/compiler/cl6x/: dlb_compiler_cl6x.h  dlb_compiler_keyword_cl6x.h
dlb_intrinsics/compiler/clang/: dlb_compiler_clang.h  dlb_compiler_keyword_clang.h
dlb_intrinsics/compiler/gcc/: dlb_compiler_gcc.h  dlb_compiler_keyword_gcc.h  manifest.mb
dlb_intrinsics/compiler/msvc/: dlb_compiler_keyword_msvc.h  dlb_compiler_msvc.h  manifest.mb
dlb_intrinsics/debug/: debug_tags.h  dlb_debug.h
dlb_intrinsics/debug/std/: debug_std.h
dlb_intrinsics/debug/windows/: debug_windows.h
dlb_intrinsics/dlb_dsplib/: blk.h  math.h
dlb_intrinsics/dlb_dsplib/backend/generic/blk/: blk_types.h  (+1 more)
dlb_intrinsics/instrument/null/: dlb_instrument_null.h
dlb_intrinsics/legacy_compat/dlb_intrinsics/: dlb_legacy.h  dlb_legacy_abstraction.h
include/: dlb_md_emul_api.h
metadata_emulation/: metadata_emulation_main.cpp
src/: dd_emulation.c  dd_emulation.h  dlb_md_emul_api.c  dlb_md_emul_pvt.h  drc_applier.c  drc_applier.h  emul_filters.c  emul_filters.h  md_compr.c  md_compr.h
test/: test_case51_emu.sh
test/reference/: line_fl_2.res  line_fs_0.res  line_fs_1.res  line_fs_5.res  line_ml_0.res  line_ml_4.res  line_ms_0.res  line_ms_1.res  line_ms_4.res  line_sp_0.res  rf_fl_0.res  rf_fl_1.res  rf_fl_4.res  rf_fl_5.res  rf_fs_2.res  rf_fs_4.res  rf_ml_1.res  rf_ml_2.res  rf_ml_5.res  rf_ms_2.res  rf_ms_5.res  rf_sp_2.res  rf_sp_4.res  rf_sp_5.res
tools/src/: graph_check.c
(+2 files in other folders)
